// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should correctly render ExpensesSummary with 1 expense 1`] = `
<div>
  <h3>
    Viewing 
    1
     expense(s) totalling 
    $2.35
  </h3>
</div>
`;

exports[`should correctly render ExpensesSummary with multiple expense 1`] = `
<div>
  <h3>
    Viewing 
    23
     expense(s) totalling 
    $453,434.33
  </h3>
</div>
`;
